--- a/views/book/book-list.ejs
+++ b/views/book/book-list.ejs
@@ -7,6 +7,12 @@
 <div class="row marketing">
 <div class="col-lg-12">
 	<h3>All Books:</h3>
+	<% if (success.length > 0 ) {%>
+		<div class="alert alert-danger alert-dismissible" role="alert">
+  			<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+  				<strong>Deleted!</strong> <%= success %>
+		</div>
+	<% } %>
 	<table class="table table-hover">
 		<tr>
 			<th>Title</th>
